[metadata]
name = jembewf
version = 0.0.1
description = Jembe Workflow Management
license = LGPL-3.0-or-later
license_files = LICENSE
author = Predrag Peranovic
author_email = predrag.peranovic@jembe.io
long_description = file: README.md
long_description_content_type = text/markdown
url= https://jembe.io
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3.10
keywords = ["workflows"]
project_urls=
    Repository = https://github.com/Jembe/jembewf

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires = 
    Flask
    Flask-SQLAlchemy
    psycopg2

[options.packages.find]
exclude = tests

[options.extras_require]
dev = 
    twine
    build
    black
    pylint
    pylint_flask
    pylint_flask_sqlalchemy
    mypy
    pytest
    coverage [toml]
    watchdog [watchmedo]